HSEARCH-3179 Merge Search 5 testing configuration into Search 6