@@ -63,10 +63,30 @@
 
         <version.junit>4.12</version.junit>
         <version.org.easymock>3.5.1</version.org.easymock>
-        <version.io.takari.junit>1.2.7</version.io.takari.junit>
-        <version.com.h2database>1.4.178</version.com.h2database>
+        <version.org.unitils>3.4.6</version.org.unitils>
+        <version.simple-jndi>0.11.4.1</version.simple-jndi>
         <version.org.assertj.assertj-core>3.9.1</version.org.assertj.assertj-core>
         <version.org.skyscreamer.jsonassert>1.2.3</version.org.skyscreamer.jsonassert>
+        <version.com.github.tomakehurst.wiremock>2.5.1</version.com.github.tomakehurst.wiremock>
+        <!-- Fixes dependency convergence within Wiremock, see below -->
+        <version.com.fasterxml.jackson>2.8.6</version.com.fasterxml.jackson>
+        <version.org.jboss.byteman>4.0.4</version.org.jboss.byteman>
+        <version.io.takari.junit>1.2.7</version.io.takari.junit>
+        <version.com.h2database>1.4.178</version.com.h2database>
+
+        <!-- Integration tests -->
+
+        <version.org.openjdk.jmh>1.20</version.org.openjdk.jmh>
+        <version.org.jboss.arquillian>1.1.11.Final</version.org.jboss.arquillian>
+        <version.org.jboss.shrinkwrap.resolver>2.2.2</version.org.jboss.shrinkwrap.resolver>
+        <version.org.wildfly.arquillian>2.0.0.Final</version.org.wildfly.arquillian>
+        <version.org.springframework.boot>1.5.3.RELEASE</version.org.springframework.boot>
+        <version.org.apache.karaf>4.1.2</version.org.apache.karaf>
+        <version.org.ops4j.pax.exam>4.11.0</version.org.ops4j.pax.exam>
+        <version.org.ops4j.pax.url>1.6.0</version.org.ops4j.pax.url>
+        <!-- Necessary for OSGi integration tests with Karaf -->
+        <version.org.javassist>3.23.1-GA</version.org.javassist>
+        <version.org.jboss.jandex>2.0.5.Final</version.org.jboss.jandex>
 
         <!-- Maven plugins versions -->
 
@@ -155,9 +175,41 @@
         <maven.compiler.argument.testTarget>${maven.compiler.testTarget}</maven.compiler.argument.testTarget>
         <maven.compiler.argument.testSource>${maven.compiler.testSource}</maven.compiler.argument.testSource>
 
-        <surefire.jvm.args.memory>-Xmx512m -Xms128m</surefire.jvm.args.memory>
+        <!--
+            The path to the root project directory.
+            This property is set by the build-helper plugin.
+            We initialize it to some crude, potentially wrong value,
+            because the Sonar Maven plugin uses this property indirectly,
+            but ignores any change made by other plugins.
+            This default value is the best we can do without the help of a Maven plugin.
+
+            Useful resources:
+             - https://www.mojohaus.org/build-helper-maven-plugin/rootlocation-mojo.html
+         -->
+        <rootProject.directory>${user.dir}</rootProject.directory>
+
+        <!-- Version to be used as baseline for API/SPI change reports -->
+        <previous.stable>5.9.0.Final</previous.stable>
+
+        <!-- JDK version required for the build; we target 1.8 since Hibernate ORM 5.3 requires Java 8 -->
+        <jdk.min.version>${maven.compiler.argument.source}</jdk.min.version>
+        <maven.min.version>3.2.3</maven.min.version>
+
+        <!-- Can be overridden by subprojects if dependency convergence cannot be achieved -->
+        <enforcer.dependencyconvergence.skip>false</enforcer.dependencyconvergence.skip>
+
+        <!-- Test settings -->
         <!-- Set empty default values to avoid Maven leaving property references (${...}) when it doesn't find a value -->
-        <surefire.jvm.args.java-version></surefire.jvm.args.java-version>
+
+        <surefire.jvm.args.memory>-Xmx512m -Xms128m</surefire.jvm.args.memory>
+        <!--
+            Provide two sets of settings for settings specific to a java version.
+            This is mainly useful when running tests in Arquillian, where illegal-access=deny won't work
+            and is not useful, so we disable it.
+         -->
+        <surefire.jvm.args.java-version.strict></surefire.jvm.args.java-version.strict>
+        <surefire.jvm.args.java-version.lenient></surefire.jvm.args.java-version.lenient>
+        <surefire.jvm.args.java-version>${surefire.jvm.args.java-version.strict}</surefire.jvm.args.java-version>
         <surefire.jvm.args.jacoco></surefire.jvm.args.jacoco>
         <failsafe.jvm.args.jacoco></failsafe.jvm.args.jacoco>
         <!--
@@ -189,21 +241,22 @@
          -->
         <surefire.environment>default</surefire.environment>
 
+        <arquillian.wildfly.jvm.args.java-version></arquillian.wildfly.jvm.args.java-version>
+        <arquillian.wildfly.jvm.args.jacoco></arquillian.wildfly.jvm.args.jacoco>
         <!--
-            The path to the root project directory.
-            This property is set by the build-helper plugin.
-            We initialize it to some crude, potentially wrong value,
-            because the Sonar Maven plugin uses this property indirectly,
-            but ignores any change made by other plugins.
-            This default value is the best we can do without the help of a Maven plugin.
-
-            Useful resources:
-             - https://www.mojohaus.org/build-helper-maven-plugin/rootlocation-mojo.html
+          The arguments below are JBoss modules settings taken from
+          https://github.com/jboss-modules/jboss-modules/blob/5b4744e74f35cbab23536e3e52c0724fdbbedcb7/src/main/java/org/jboss/modules/maven/MavenSettings.java#L264
+          - remote.maven.repo: necessary for the WF provisioning to work when the JBoss Nexus is not in the user's settings
+          - maven.repo.local: necessary for the WF provisioning to work when using a non-default local repository
          -->
-        <rootProject.directory>${user.dir}</rootProject.directory>
+        <arquillian.wildfly.jvm.args.jbossmodules>
+            -Dremote.maven.repo=${jboss.public.repo.url}
+            -Dmaven.repo.local=${settings.localRepository}
+        </arquillian.wildfly.jvm.args.jbossmodules>
+        <arquillian.wildfly.jvm.args>${arquillian.wildfly.jvm.args.java-version} ${arquillian.wildfly.jvm.args.jacoco} ${arquillian.wildfly.jvm.args.jbossmodules}</arquillian.wildfly.jvm.args>
 
-        <!-- Version to be used as baseline for API/SPI change reports -->
-        <previous.stable>5.9.0.Final</previous.stable>
+        <pax-exam.jvm.args.jacoco></pax-exam.jvm.args.jacoco>
+        <pax-exam.jvm.args>${pax-exam.jvm.args.jacoco}</pax-exam.jvm.args>
 
         <!--
             The path to a single merged JaCoCo coverage file including all of the coverage data for all modules.
@@ -216,13 +269,6 @@
         <test.elasticsearch.host.url>http://localhost:9200</test.elasticsearch.host.url>
         <test.elasticsearch.host.username></test.elasticsearch.host.username>
         <test.elasticsearch.host.password></test.elasticsearch.host.password>
-
-        <!-- JDK version required for the build; we target 1.8 since Hibernate ORM 5.3 requires Java 8 -->
-        <jdk.min.version>${maven.compiler.argument.source}</jdk.min.version>
-        <maven.min.version>3.2.3</maven.min.version>
-
-        <!-- Can be overridden by subprojects if dependency convergence cannot be achieved -->
-        <enforcer.dependencyconvergence.skip>false</enforcer.dependencyconvergence.skip>
 
         <!-- Eclipse plugin options -->
 
@@ -1141,8 +1187,21 @@
                         <reuseForks>true</reuseForks>
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         <runOrder>alphabetical</runOrder>
+                        <systemPropertyVariables>
+                            <!-- See HSEARCH-1444 -->
+                            <hibernate.service.allow_crawling>false</hibernate.service.allow_crawling>
+                            <com.sun.management.jmxremote>true</com.sun.management.jmxremote>
+                            <org.hibernate.search.enable_performance_tests>${org.hibernate.search.enable_performance_tests}</org.hibernate.search.enable_performance_tests>
+                            <org.hibernate.search.fail_on_unreleased_service>true</org.hibernate.search.fail_on_unreleased_service>
+                            <!-- Javassist still not working when using stricter checks with Jigsaw: use ByteBuddy -->
+                            <hibernate.bytecode.provider>bytebuddy</hibernate.bytecode.provider>
+                        </systemPropertyVariables>
                         <argLine>${surefire.jvm.args}</argLine>
                         <reportNameSuffix>${surefire.environment}-${surefire.executing-module}</reportNameSuffix>
+                        <additionalClasspathElements>
+                            <!-- Needed by Byteman to load the agent on demand -->
+                            <additionalClasspathElement>${jdk-toolsjar}</additionalClasspathElement>
+                        </additionalClasspathElements>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -1154,8 +1213,21 @@
                         <reuseForks>true</reuseForks>
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         <runOrder>alphabetical</runOrder>
+                        <systemPropertyVariables>
+                            <!-- See HSEARCH-1444 -->
+                            <hibernate.service.allow_crawling>false</hibernate.service.allow_crawling>
+                            <com.sun.management.jmxremote>true</com.sun.management.jmxremote>
+                            <org.hibernate.search.enable_performance_tests>${org.hibernate.search.enable_performance_tests}</org.hibernate.search.enable_performance_tests>
+                            <org.hibernate.search.fail_on_unreleased_service>true</org.hibernate.search.fail_on_unreleased_service>
+                            <!-- Javassist still not working when using stricter checks with Jigsaw: use ByteBuddy -->
+                            <hibernate.bytecode.provider>bytebuddy</hibernate.bytecode.provider>
+                        </systemPropertyVariables>
                         <argLine>${failsafe.jvm.args}</argLine>
                         <reportNameSuffix>${surefire.environment}-${surefire.executing-module}</reportNameSuffix>
+                        <additionalClasspathElements>
+                            <!-- Needed by Byteman to load the agent on demand -->
+                            <additionalClasspathElement>${jdk-toolsjar}</additionalClasspathElement>
+                        </additionalClasspathElements>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -1306,6 +1378,8 @@
             <properties>
                 <!-- This is to avoid starting an Elasticsearch node for each module needing integration test -->
                 <test.elasticsearch.host.provided>true</test.elasticsearch.host.provided>
+                <!-- This is to avoid unzipping any WildFly server, included modules, configurations and JDBC drivers -->
+                <skipWildFlyPreparation>true</skipWildFlyPreparation>
             </properties>
         </profile>
         <profile>
@@ -1318,6 +1392,8 @@
             <properties>
                 <!-- This is to avoid starting an Elasticsearch node for each module needing integration test -->
                 <test.elasticsearch.host.provided>true</test.elasticsearch.host.provided>
+                <!-- This is to avoid unzipping any WildFly server, included modules, configurations and JDBC drivers -->
+                <skipWildFlyPreparation>true</skipWildFlyPreparation>
             </properties>
         </profile>
 
@@ -1338,10 +1414,16 @@
                 <jdk>9</jdk>
             </activation>
             <properties>
-                <surefire.jvm.args.java-version>
+                <surefire.jvm.args.java-version.lenient>
                     -Djdk.attach.allowAttachSelf=true
+                </surefire.jvm.args.java-version.lenient>
+                <surefire.jvm.args.java-version.strict>
+                    ${surefire.jvm.args.java-version.lenient}
                     --illegal-access=deny
-                </surefire.jvm.args.java-version>
+                </surefire.jvm.args.java-version.strict>
+                <arquillian.wildfly.jvm.args.java-version>
+                    -Djdk.attach.allowAttachSelf=true
+                </arquillian.wildfly.jvm.args.java-version>
             </properties>
             <modules>
                 <!-- Nothing at the moment -->
@@ -1354,10 +1436,16 @@
                 <jdk>10</jdk>
             </activation>
             <properties>
-                <surefire.jvm.args.java-version>
+                <surefire.jvm.args.java-version.lenient>
                     -Djdk.attach.allowAttachSelf=true
+                </surefire.jvm.args.java-version.lenient>
+                <surefire.jvm.args.java-version.strict>
+                    ${surefire.jvm.args.java-version.lenient}
                     --illegal-access=deny
-                </surefire.jvm.args.java-version>
+                </surefire.jvm.args.java-version.strict>
+                <arquillian.wildfly.jvm.args.java-version>
+                    -Djdk.attach.allowAttachSelf=true
+                </arquillian.wildfly.jvm.args.java-version>
             </properties>
             <modules>
                 <!-- Nothing at the moment -->
@@ -1370,15 +1458,28 @@
                 <jdk>11</jdk>
             </activation>
             <properties>
-                <surefire.jvm.args.java-version>
+                <surefire.jvm.args.java-version.lenient>
                     -Djdk.attach.allowAttachSelf=true
-                    --illegal-access=deny
                     -Dcom.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize=true
-                </surefire.jvm.args.java-version>
+                </surefire.jvm.args.java-version.lenient>
+                <surefire.jvm.args.java-version.strict>
+                    ${surefire.jvm.args.java-version.lenient}
+                    --illegal-access=deny
+                </surefire.jvm.args.java-version.strict>
+                <arquillian.wildfly.jvm.args.java-version>
+                    -Djdk.attach.allowAttachSelf=true
+                </arquillian.wildfly.jvm.args.java-version>
             </properties>
             <modules>
                 <!-- Nothing at the moment -->
             </modules>
+        </profile>
+
+        <profile>
+            <id>perf</id>
+            <properties>
+                <org.hibernate.search.enable_performance_tests>true</org.hibernate.search.enable_performance_tests>
+            </properties>
         </profile>
 
         <profile>
@@ -1518,6 +1619,33 @@
             </build>
         </profile>
 
+        <!-- ====================================== -->
+        <!-- Detection of tools classes for Byteman -->
+        <!-- ====================================== -->
+        <!-- See the configuration of the surefire and failsafe plugins -->
+        <profile>
+            <id>default-toolsjar-profile</id>
+            <activation>
+                <file>
+                    <exists>${java.home}/../lib/tools.jar</exists>
+                </file>
+            </activation>
+            <properties>
+                <jdk-toolsjar>${java.home}/../lib/tools.jar</jdk-toolsjar>
+            </properties>
+        </profile>
+        <profile>
+            <id>mac-toolsjar-profile</id>
+            <activation>
+                <file>
+                    <exists>${java.home}/../Classes/classes.jar</exists>
+                </file>
+            </activation>
+            <properties>
+                <jdk-toolsjar>${java.home}/../Classes/classes.jar</jdk-toolsjar>
+            </properties>
+        </profile>
+
         <profile>
             <id>coverage</id>
             <properties>
@@ -1536,6 +1664,13 @@
                  -->
                 <surefire.jvm.args.jacoco>@{surefire.jvm.args.jacoco.lateEval}</surefire.jvm.args.jacoco>
                 <failsafe.jvm.args.jacoco>@{failsafe.jvm.args.jacoco.lateEval}</failsafe.jvm.args.jacoco>
+                <!--
+                    We don't use @{...} for late property evaluation here,
+                    because these properties are evaluated by the maven-resource-plugin,
+                    which doesn't understand the @{...} syntax but somehow manages to always use late evaluation.
+                 -->
+                <arquillian.wildfly.jvm.args.jacoco>${failsafe.jvm.args.jacoco.lateEval}</arquillian.wildfly.jvm.args.jacoco>
+                <pax-exam.jvm.args.jacoco>${failsafe.jvm.args.jacoco.lateEval}</pax-exam.jvm.args.jacoco>
             </properties>
             <build>
                 <plugins>
@@ -1560,6 +1695,11 @@
                             </execution>
                             <execution>
                                 <id>jacoco-prepare-prepare-agent-integration</id>
+                                <!--
+                                    This is necessary in order for the property to be set before we process resources,
+                                    such as arquillian.xml in WildFly tests or maven.properties in OSGi tests.
+                                 -->
+                                <phase>initialize</phase>
                                 <goals>
                                     <goal>prepare-agent-integration</goal>
                                 </goals>
